--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -3,5 +3,6 @@
   %p
     Published at
     = article.created_at.strftime('%b %d, %Y')
-  %p= truncate(article.content, length: 200) 
-= link_to "New Article", new_article_path
+  %p= truncate(article.content, length: 200)
+- if user_signed_in?
+  = link_to "New Article", new_article_path
